feat(profile): update for GRP project and VROOM

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -7,22 +7,16 @@
 </head>
 <body>
 <div class="container">
-    <p class="h1">Hello!</p>
+    <p class="h1">Yizirui FANG's Page</p>
 </div>
 <div class="container">
-    This is me.
-    <img src="https://raw.githubusercontent.com/circleTreeF/myImg/master/GitHub_Image.jpg" style="width:150px;height:200px;" alt="My photo">
+    <img src="https://raw.githubusercontent.com/circleTreeF/myImg/master/GitHub_Image.jpg"
+         style="width:120px;height:160px;" alt="My photo">
 </div>
 <div class="container">
-    <p>
-        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 3 Computer
-        Science student in the University of
-        Nottingham Ningbo
-        China.
-    </p>
+    <p>Yizrui Fang (George)</p>
     <p>Tel: +86 17762570926</p>
     <p>Professional Email: <a href="mailto:scyyf1@nottingham.edu.cn">scyyf1@nottingham.edu.cn</a></p>
-    <p>Email <a href="mailto:circletree@outlook.com">circletree@outlook.com</a></p>
 </div>
 <div class="container">
     <p class="h2">Education</p>
@@ -36,9 +30,9 @@
     </div>
     <div>Expected degree: the first class</div>
     <div>
-        Core modules: Database and Interfaces, Systems and Architecture, Programming Paradigms, Fundamentals of
-        Artificial Intelligence, Software Engineering, Programming and algorithm, Computer Fundamentals and Mathematics
-        for Computer Scientists
+        Core modules: Fundamentals of Artificial Intelligence, Database and Interfaces, Mathematics
+        for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
+        algorithm, Computer Fundamentals and
     </div>
     </p>
     <p>
@@ -51,7 +45,65 @@
 </div>
 
 <div class="container">
-    <div class="h2">Competition Experience</div>
+    <div class="h2">Professional Experience</div>
+    <p>
+    <div>
+        <strong>Virtual Classroom Project Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept, 2020 - Present
+    </div>
+    <div><strong>Student Intern for Software Development</strong></div>
+    <div>
+        <ul>
+            <li>Supervised by Vice Provost, <a
+                    href="https://www.nottingham.edu.cn/en/Humanities-and-Social-Sciences/People/Profile.aspx?id=20bd397e-c017-49c5-bbd5-30ee61a5d154&language=en-GB">Prof
+                May Tan-Mullins</a>, and lead by <a
+                    href="https://www.nottingham.edu.cn/en/CELE/CELE-and-CPSO-Staff/CELE-Staff-Profile.aspx?id=1b358cdc-e860-44d2-b1d6-a0b5691126bd&language=en-GB">Dr
+                Sannia Mareta</a> , focusing on the
+                exploration of Virtual Reality
+                technologies, Virtual Classroom Team aims at enhancing our teaching & learning experience at the
+                University
+                of Nottingham Ningbo China - moving towards the future.
+            </li>
+            <li>Develop, test and utilise the university's own customised and interactive virtual reality based on
+                Unity3D with C#.
+            </li>
+            <li>Implement the movement, ball playing and strike, menu, multi-players synchronization features of the
+                software with Photon Network.
+            </li>
+            <li>Adapt the desktop version of the software to mobile devices and HTC Vive Pro with Google VR and STEAM
+                VR.
+            </li>
+        </ul>
+    </div>
+    </p>
+</div>
+
+<div class="container">
+    <div class="h2">Project Experience</div>
+    <p>
+    <div>
+        <div>
+            <strong>Distributed Road Network Monitoring System</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept,
+            2020 - Apr, 2021
+        </div>
+        <div>
+            <ul>
+                <li>This project is supervised by <a
+                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=c856979f-d2aa-47ab-b2b5-3a611c28e461&language=en-GB">Dr
+                    Matthew Pike</a>, assistant professor at the University of Nottingham
+                    Ningbo China.
+                </li>
+                <li>Lead the design, implement and testing of this project. Based on Django, Docker and PostgreSQL to
+                    develop the backend system to implement the client-server communication, database update, storage,
+                    account management. With the dynamical time wrapping algorithm to detect the abnormality on the
+                    road.
+                </li>
+                <li>Based on Flutter, develop the cross-platform mobile application to implement the collection and the
+                    transferring of the acceleration and GPS data.
+                </li>
+            </ul>
+        </div>
+    </div>
+    </p>
     <p>
     <div>
         <strong>Mathematical Contest in Modeling</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;April, 2020
@@ -59,33 +111,37 @@
     <div>
         Honorable Mention
     </div>
+    <div>In 4 days, together with the other two teammates and support from our advisor, we complete a 27-page report
+        about simulating the success of the online product in Amazon by applying Linear Regression, ARIMA time series
+        analysis and Bag of word model.
+    </div>
     </p>
 </div>
 <div class="container">
-    <div class="h2">Project Experience</div>
+    <div class="h2">Research Experience</div>
     <p>
     <div>
         <div>
-            <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun, 2020- Oct, 2020
+            <strong>Modified Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
+            2020- Oct, 2020
         </div>
 
         <div>
             <ul>
                 <li>This research project is supervised by <a
-                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr.
+                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
                     Tony</a> at the University of Nottingham Ningbo China, School of Computer Science.
                 </li>
                 <li>
-                    <b>One journal paper is expected for this research project.</b>
+                    One journal paper is highly like to be published for this research project
                 </li>
                 <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets
-                    of
-                    values
-                    rather than making point predictions. They have the property that they are reliable to some
-                    user-defined
-                    confidence level, so long as data is independent and identically distributed (iid). These algorithms
-                    would split
-                    the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
+                    of values rather than making point predictions. They have the property that they are reliable to
+                    some
+                    user-defined confidence level, so long as data is independent and identically distributed (iid).
+                    These algorithms
+                    would split the samples data into 3 data sets, the proper training set, the calibration set and the
+                    testing set.
                 </li>
                 <li>However, in the real world cases, the size of the available data set may be too limited to split
                     into
@@ -112,25 +168,6 @@
             </ul>
 
         </div>
-    </div>
-    <div>
-        <div>
-            <strong>Virtual Classroom Project Team of University of Nottingham Ningbo China</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept,
-            2020- Present
-        </div>
-        <div><strong>Student Internship For Software</strong></div>
-        <div>
-            <ul>
-                <li>Focusing on the exploration of Virtual Reality technologies, Virtual Classroom aims at enhancing our
-                    teaching & learning experience at University of Nottingham Ningbo China - moving towards the future.
-                </li>
-                <li>Develop and utilise the Android version and the multi-player module of the university's own
-                    customised and interactive virtual reality software, starting from a
-                    virtual classroom based on Unity3D with C#.
-                </li>
-            </ul>
-        </div>
-        </p>
     </div>
 </div>
 <div class="container">
