--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 </div>
 <div class="container">
     <p>
+        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 3 Computer
+        Science student in the University of
+        Nottingham Ningbo
+        China.
+    </p>
+    <p>
         This is my index page. You could find the follow information about me.
     </p>
     <div>
@@ -31,18 +37,7 @@
             blog (CN only)</a>
     </div>
 </div>
-<div class="container">
-    <button class="g-recaptcha"
-            data-sitekey="reCAPTCHA_site_key"
-            data-callback='onSubmit'
-            data-action='submit'>Submit</button>
-</div>
-<script>
-    function onSubmit(token) {
-        document.getElementById("demo-form").submit();
-    }
-</script>
-<script src="https://www.google.com/recaptcha/api.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
