feat(profile): update detail about edu

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -26,9 +26,10 @@
     </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 4.0
+        GPA: 3.9/4.0
     </div>
-    <div>Expected degree: the first class</div>
+    <div>Expected degree: the first class with honors</div>
+    <div>2020 Head's Scholarship (Top 20%), 2020 Outstanding Member of Youth League</div>
     <div>
         Core modules: Fundamentals of Artificial Intelligence, Database and Interfaces, Mathematics
         for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
@@ -76,7 +77,64 @@
     </div>
     </p>
 </div>
+<div class="container">
+    <div class="h2">Research Experience</div>
+    <p>
+    <div>
+        <div>
+            <strong>Modified Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
+            2020- Oct, 2020
+        </div>
 
+        <div>
+            <ul>
+                <li>This research project is supervised by <a
+                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
+                    Anthony Graham Bellotti</a> associated professor at the University of Nottingham Ningbo China, School of Computer
+                    Science.
+                </li>
+                <li>
+                    One journal paper is highly like to be published for this research project
+                </li>
+                <li>Using Python, Numpy and Ski-kit learn, with experiments and statistics analysis, this research
+                    project addresses the problems to provide a modified version of the conformal predictor by
+                    overlapping the proper training set and the calibration set and recommendations on their use.
+                </li>
+                <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets
+                    of values rather than making point predictions. They have the property that they are reliable to
+                    some
+                    user-defined confidence level, so long as data is independent and identically distributed (iid).
+                    These algorithms
+                    would split the samples data into 3 data sets, the proper training set, the calibration set and the
+                    testing set.
+                </li>
+                <li>However, in the real world cases, the size of the available data set may be too limited to split
+                    into
+                    three
+                    significant data sets. This
+                    leads to the research challenges in two directions: (1) to ensure that their predictions are
+                    optimally
+                    efficient, (2) since inductive conformal predictor require three
+                    independent data sets, proper training, calibration and testing, how best to manage the allocation
+                    of
+                    data to
+                    those three
+                    sets whilst maintaining the reliability property.
+                </li>
+                <li>
+                    This research project addresses those problems with the target
+                    to provide
+                    a modified version of conformal predictor by overlapping the proper training set and the calibration
+                    set
+                    and
+                    recommendations on their use.
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="h2">Project Experience</div>
     <p>
@@ -117,59 +175,7 @@
     </div>
     </p>
 </div>
-<div class="container">
-    <div class="h2">Research Experience</div>
-    <p>
-    <div>
-        <div>
-            <strong>Modified Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
-            2020- Oct, 2020
-        </div>
 
-        <div>
-            <ul>
-                <li>This research project is supervised by <a
-                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
-                    Tony</a> at the University of Nottingham Ningbo China, School of Computer Science.
-                </li>
-                <li>
-                    One journal paper is highly like to be published for this research project
-                </li>
-                <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets
-                    of values rather than making point predictions. They have the property that they are reliable to
-                    some
-                    user-defined confidence level, so long as data is independent and identically distributed (iid).
-                    These algorithms
-                    would split the samples data into 3 data sets, the proper training set, the calibration set and the
-                    testing set.
-                </li>
-                <li>However, in the real world cases, the size of the available data set may be too limited to split
-                    into
-                    three
-                    significant data sets. This
-                    leads to the research challenges in two directions: (1) to ensure that their predictions are
-                    optimally
-                    efficient, (2) since inductive conformal predictor require three
-                    independent data sets, proper training, calibration and testing, how best to manage the allocation
-                    of
-                    data to
-                    those three
-                    sets whilst maintaining the reliability property.
-                </li>
-                <li>
-                    This research project addresses those problems with the target
-                    to provide
-                    a modified version of conformal predictor by overlapping the proper training set and the calibration
-                    set
-                    and
-                    recommendations on their use.
-                </li>
-
-            </ul>
-
-        </div>
-    </div>
-</div>
 <div class="container">
     <div class="h2">Campus Experience</div>
     <p>
