feat: update order

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -44,45 +44,12 @@
     <div>GPA: 3.8</div>
     </p>
 </div>
-
-<div class="container">
-    <div class="h2">Professional Experience</div>
-    <p>
-    <div>
-        <strong>Virtual Classroom Project Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept, 2020 - Present
-    </div>
-    <div><strong>Student Intern for Software Development</strong></div>
-    <div>
-        <ul>
-            <li>Supervised by Vice Provost, <a
-                    href="https://www.nottingham.edu.cn/en/Humanities-and-Social-Sciences/People/Profile.aspx?id=20bd397e-c017-49c5-bbd5-30ee61a5d154&language=en-GB">Prof
-                May Tan-Mullins</a>, and lead by <a
-                    href="https://www.nottingham.edu.cn/en/CELE/CELE-and-CPSO-Staff/CELE-Staff-Profile.aspx?id=1b358cdc-e860-44d2-b1d6-a0b5691126bd&language=en-GB">Dr
-                Sannia Mareta</a> , focusing on the
-                exploration of Virtual Reality
-                technologies, Virtual Classroom Team aims at enhancing our teaching & learning experience at the
-                University
-                of Nottingham Ningbo China - moving towards the future.
-            </li>
-            <li>Develop, test and utilise the university's own customised and interactive virtual reality based on
-                Unity3D with C#.
-            </li>
-            <li>Implement the movement, ball playing and strike, menu, multi-players synchronization features of the
-                software with Photon Network.
-            </li>
-            <li>Adapt the desktop version of the software to mobile devices and HTC Vive Pro with Google VR and STEAM
-                VR.
-            </li>
-        </ul>
-    </div>
-    </p>
-</div>
 <div class="container">
     <div class="h2">Research Experience</div>
     <p>
     <div>
         <div>
-            <strong>Modified Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
+            <strong>Modification of Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
             2020- Oct, 2020
         </div>
 
@@ -135,6 +102,39 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="h2">Professional Experience</div>
+    <p>
+    <div>
+        <strong>Virtual Classroom Project Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept, 2020 - Present
+    </div>
+    <div><strong>Student Intern for Software Development</strong></div>
+    <div>
+        <ul>
+            <li>Supervised by Vice Provost, <a
+                    href="https://www.nottingham.edu.cn/en/Humanities-and-Social-Sciences/People/Profile.aspx?id=20bd397e-c017-49c5-bbd5-30ee61a5d154&language=en-GB">Prof
+                May Tan-Mullins</a>, and lead by <a
+                    href="https://www.nottingham.edu.cn/en/CELE/CELE-and-CPSO-Staff/CELE-Staff-Profile.aspx?id=1b358cdc-e860-44d2-b1d6-a0b5691126bd&language=en-GB">Dr
+                Sannia Mareta</a> , focusing on the
+                exploration of Virtual Reality
+                technologies, Virtual Classroom Team aims at enhancing our teaching & learning experience at the
+                University
+                of Nottingham Ningbo China - moving towards the future.
+            </li>
+            <li>Develop, test and utilise the university's own customised and interactive virtual reality based on
+                Unity3D with C#.
+            </li>
+            <li>Implement the movement, ball playing and strike, menu, multi-players synchronization features of the
+                software with Photon Network.
+            </li>
+            <li>Adapt the desktop version of the software to mobile devices and HTC Vive Pro with Google VR and STEAM
+                VR.
+            </li>
+        </ul>
+    </div>
+    </p>
+</div>
+
 <div class="container">
     <div class="h2">Project Experience</div>
     <p>
