--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             coursework in Year 2 Autumn Semester</a>
     </div>
     <div>
+        <a href="https://github.com/circleTreeF/2020_GRP_Team17" class="btn btn-default btn-lg justified" role="button">Distributed
+            Road Network Monitoring System (Uni of Nottingham Group Project)</a>
+    </div>
+    <div>
         <a href="my_blog/" class="btn btn-default btn-lg justified" role="button">My
             blog (CN only)</a>
     </div>
