--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         This is my index page. You could find the follow information about me.
     </p>
     <div>
-        <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile</a>
+        <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
+    </div>
+    <div>
+        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified" role="button">My CV</a>
     </div>
     <div>
         <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
