feat: update interest

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <div class="container">
     <p>
         My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 3 Computer
-        Science student in the University of
-        Nottingham Ningbo
-        China.
+        Science student in <a href="https://www.nottingham.edu.cn/">the University of
+        Nottingham Ningbo China</a>. I am interested in machine learning, with particularly its application in finance,
+        health and education. I am also engaged in Virtual Reality/Augmented Reality(VR/AR), and I am currently a
+        student intern in Virtual Classroom Team.
     </p>
     <p>
         This is my index page. You could find the follow information about me.
@@ -29,10 +30,12 @@
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
     </div>
     <div>
-        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified" role="button">My CV</a>
+        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"
+           role="button">My CV</a>
     </div>
     <div>
-        <a href="docs/Yizirui_Fang_Transcript_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified" role="button">My Transcript</a>
+        <a href="docs/Yizirui_Fang_Transcript_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf"
+           class="btn btn-default btn-lg justified" role="button">My Transcript</a>
     </div>
     <div>
         <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
