update: profile GPA and index year

--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@
 </div>
 <div class="container">
     <p>
-        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 3 Computer
-        Science student in <a href="https://www.nottingham.edu.cn/">the University of
-        Nottingham Ningbo China</a>. I am interested in machine learning, with particularly its application in finance,
-        health and education. I am also engaged in Virtual Reality/Augmented Reality(VR/AR), and I am currently a
+        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am an incoming Undergraduate Final Year
+        (Year 4) Computer
+        Science student at <a href="https://www.nottingham.edu.cn/">the University of
+        Nottingham Ningbo China</a>. I am interested in machine learning, particularly its application in finance,
+        and education. I am also engaged in Virtual Reality/Augmented Reality(VR/AR), and I am currently a
         student intern in Virtual Classroom Team.
+    </p>
+    <p>
+        My prospective final year project (2021 - 2022) will focus on the augmentation techniques for population drift
+        particularly its application in the credit risk modelling domain:
+        The issues this project would like to solve are that the distribution and behaviour of observations changes over
+        time, so-called <i>population drift</i>. This will leads the performance of machine learning models degrade over
+        time as the data drifts. This is the fact significantly observed over the 2009 financial crisis and the 2020
+        COVID-2019 period.
     </p>
     <p>
         This is my index page. You could find the follow information about me.
