--- a/MyProfile.html
+++ b/MyProfile.html
@@ -29,7 +29,7 @@
         GPA: 4.0/4.0
     </div>
     <div>Expected degree: the first class with honors</div>
-    <div>2020 Head's Scholarship (Top 20%), 2020 Outstanding Member of Youth League</div>
+    <div>2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
     <div>
         Core modules: Fundamentals of Artificial Intelligence, Database and Interfaces, Mathematics
         for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
