--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </p>
     <p>
         My prospective final year project (2021 - 2022) will focus on the augmentation techniques for population drift
-        particularly its application in the credit risk modelling domain:
+        particularly its application in the credit risk modelling domain:<br>
         The issues this project would like to solve are that the distribution and behaviour of observations changes over
-        time, so-called <i>population drift</i>. This will leads the performance of machine learning models degrade over
+        time, so-called <i>population drift</i>. This may lead the performance of machine learning models to degrade over
         time as the data drifts. This is the fact significantly observed over the 2009 financial crisis and the 2020
         COVID-2019 period.
     </p>
