feat: add SCT research experience and Individual Dissertation Single Honours

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -48,6 +48,45 @@
     <div class="h2">Research Experience</div>
     <p>
     <div>
+        <div><strong>Augmentation Techniques for Population Drift</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Jul, 2021 - Present
+        </div>
+        <ul>
+            <li>This research project is expected to be an individual project and supervised by <a
+                    href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
+                Anthony Graham Bellotti</a> associated professor at the University of Nottingham Ningbo China, School of
+                Computer
+                Science.
+            </li>
+            <li>This research aims to propose a novel approach of data augmentation for the credit risk modelling to
+                address the issue of population drift, the change of the distribution over time.
+            </li>
+            <li>Construct two necessary databases with PostgreSQL, SQLalchem, Docker and Spark.</li>
+            <li>Replicate the various credit risk model.</li>
+            <li>Propose novel data augmentation approach to address the population.</li>
+        </ul>
+    </div>
+    </p>
+    <p>
+    <div>
+    <div><strong>Data Analysis on the Single Cell Transplantation</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        April, 2021 - Sept, 2021
+    </div>
+    <ul>
+        <li>This research project is supervised by <a
+                href="https://www.nottingham.edu.cn/en/People/Profile.aspx?id=6dacb624-2867-4039-8b87-fffad430fa7a&language=en-GB">Prof.
+            Vladimir Brusic</a> Li Dak Sum Chair Professor at the University of Nottingham Ningbo China, School of
+            Computer Science.
+        </li>
+        <li>Clean, standardize, control quality of the single cell transplantation data.</li>
+        <li>Automatize the three cell type classification and visualization methods, distance profile, RNA profile, Protein Marker Profile.</li>
+        <li>Investigate the rationales of the degradation of the ANN model in the single cell transplantation data with higher gene expression.</li>
+        <li>Investigate and propose a novel normalization approach for the promising and robust distance profile analysis.</li>
+    </ul>
+    </div>
+    </p>
+    <p>
+    <div>
         <div>
             <strong>Modification of Conformal Predictor with Overlaying</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun,
             2020- Oct, 2020
@@ -57,7 +96,8 @@
             <ul>
                 <li>This research project is supervised by <a
                         href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
-                    Anthony Graham Bellotti</a> associated professor at the University of Nottingham Ningbo China, School of Computer
+                    Anthony Graham Bellotti</a> associated professor at the University of Nottingham Ningbo China,
+                    School of Computer
                     Science.
                 </li>
                 <li>
