fix: update the grade and transcript

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -26,14 +26,14 @@
     </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 4.0/4.0
+        GPA: 4.0/4.0 (UK Grading System)
     </div>
-    <div>Expected degree: the first class with honors</div>
+    <div>Expected degree: The first class with honors</div>
     <div>2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
     <div>
-        Core modules: Fundamentals of Artificial Intelligence, Database and Interfaces, Mathematics
+        Core modules: Artificial Intelligence Method, , Database and Interfaces, Mathematics
         for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
-        algorithm, Computer Fundamentals and
+        algorithm, Computer Fundamentals
     </div>
     </p>
     <p>
@@ -64,6 +64,7 @@
             <li>Construct two necessary databases with PostgreSQL, SQLalchem, Docker and Spark.</li>
             <li>Replicate the various credit risk model.</li>
             <li>Propose novel data augmentation approach to address the population.</li>
+            <li>Evaluate the credit risk models.</li>
         </ul>
     </div>
     </p>
@@ -101,7 +102,7 @@
                     Science.
                 </li>
                 <li>
-                    One journal paper is highly like to be published for this research project
+                    One journal paper is expected to be published for this research project
                 </li>
                 <li>Using Python, Numpy and Ski-kit learn, with experiments and statistics analysis, this research
                     project addresses the problems to provide a modified version of the conformal predictor by
@@ -170,6 +171,8 @@
             <li>Adapt the desktop version of the software to mobile devices and HTC Vive Pro with Google VR and STEAM
                 VR.
             </li>
+            <li>Design, implement, and test the human and computer interaction features for HTC Vive Pro .</li>
+            <li>Implement online sync feature for the players' environment with Photon Network RPC.</li>
         </ul>
     </div>
     </p>
