--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="container">
     <p>
-        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am an incoming Undergraduate Final Year
+        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am an Undergraduate Final Year
         (Year 4) Computer
         Science student at <a href="https://www.nottingham.edu.cn/">the University of
         Nottingham Ningbo China</a>. I am interested in machine learning, particularly its application in finance,
@@ -25,7 +25,7 @@
         student intern in Virtual Classroom Team.
     </p>
     <p>
-        My prospective final year project (2021 - 2022) will focus on the augmentation techniques for population drift
+        My current final year project (2021 - 2022) focus on the augmentation techniques for population drift (also concept drift)
         particularly its application in the credit risk modelling domain:<br>
         The issues this project would like to solve are that the distribution and behaviour of observations changes over
         time, so-called <i>population drift</i>. This may lead the performance of machine learning models to degrade over
@@ -38,12 +38,12 @@
     <div>
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
     </div>
+<!--    <div>-->
+<!--        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"-->
+<!--           role="button">My CV (Not Updated Yet. Please refer to the website)</a>-->
+<!--    </div>-->
     <div>
-        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"
-           role="button">My CV</a>
-    </div>
-    <div>
-        <a href="docs/Yizirui_Fang_Transcript_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf"
+        <a href="docs/Yizirui_FANG.Transcript.Uni.Of.Nottingham.pdf"
            class="btn btn-default btn-lg justified" role="button">My Transcript</a>
     </div>
     <div>
