fix: fix the name of the docs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!--           role="button">My CV (Not Updated Yet. Please refer to the website)</a>-->
 <!--    </div>-->
     <div>
-        <a href="docs/Yizirui_FANG.Transcript.Uni.Of.Nottingham.pdf"
+        <a href="docs/Yizirui_FANG.Transcript.Uni.of.Nottingham.pdf"
            class="btn btn-default btn-lg justified" role="button">My Transcript</a>
     </div>
     <div>
