--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         student intern in Virtual Classroom Team.
     </p>
     <p>
-        My current final year project (2021 - 2022) focus on the augmentation techniques for population drift (also concept drift)
+        My current final year project (2021 - 2022) focus on the augmentation techniques for population drift (also
+        concept drift)
         particularly its application in the credit risk modelling domain:<br>
         The issues this project would like to solve are that the distribution and behaviour of observations changes over
-        time, so-called <i>population drift</i>. This may lead the performance of machine learning models to degrade over
+        time, so-called <i>population drift</i>. This may lead the performance of machine learning models to degrade
+        over
         time as the data drifts. This is the fact significantly observed over the 2009 financial crisis and the 2020
         COVID-2019 period.
     </p>
@@ -38,13 +40,17 @@
     <div>
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
     </div>
-<!--    <div>-->
-<!--        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"-->
-<!--           role="button">My CV (Not Updated Yet. Please refer to the website)</a>-->
-<!--    </div>-->
+    <!--    <div>-->
+    <!--        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"-->
+    <!--           role="button">My CV (Not Updated Yet. Please refer to the website)</a>-->
+    <!--    </div>-->
     <div>
-        <a href="docs/Yizirui_FANG.Transcript.Uni.of.Nottingham.pdf"
-           class="btn btn-default btn-lg justified" role="button">My Transcript</a>
+        <div>
+            <a href="docs/Yizirui_FANG.Transcript.Uni.of.Nottingham.pdf"
+               class="btn btn-default btn-lg justified" role="button">My Transcript</a>
+        </div>
+
+        For mark convention, please refer to the <a href="docs/GPA_Letter.Uni.of.Nottingham.pdf">ＧＰＡ Letter</a> issued by the University of Nottingham Ningbo China.
     </div>
     <div>
         <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
