feat: nominee update

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -29,9 +29,9 @@
         GPA: 4.0/4.0 (UK Grading System)
     </div>
     <div>Expected degree: The first class with honors</div>
-    <div>2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
+    <div> 2020-2021 Zhejiang Provincial Scholarship Nominee, 2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
     <div>
-        Core modules: Artificial Intelligence Method, , Database and Interfaces, Mathematics
+        Core modules: Artificial Intelligence Method, Database and Interfaces, Mathematics
         for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
         algorithm, Computer Fundamentals
     </div>
