feat: SCT Research update

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -29,10 +29,10 @@
         GPA: 4.0/4.0 (UK Grading System)
     </div>
     <div>Expected degree: The first class with honors</div>
-    <div> 2020-2021 Zhejiang Provincial Scholarship Nominee, 2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
+    <div>Awards: 2020-2021 Zhejiang Provincial Scholarship, 2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
     <div>
-        Core modules: Artificial Intelligence Method, Database and Interfaces, Mathematics
-        for Computer Scientists, Systems and Architecture, Programming Paradigms, Software Engineering, Programming and
+        Core modules: Machine Learning, Artificial Intelligence Method, Programming Paradigms, Database and Interfaces, Mathematics
+        for Computer Scientists, Systems and Architecture, Software Engineering, Programming and
         algorithm, Computer Fundamentals
     </div>
     </p>
@@ -41,7 +41,7 @@
         Jul, 2019
     </div>
     <div>Machine Learning and applied statistics summer course (ECTS 7.5)</div>
-    <div>GPA: 3.8</div>
+    <div>GPA: 3.6</div>
     </p>
 </div>
 <div class="container">
@@ -63,8 +63,8 @@
             </li>
             <li>Construct two necessary databases with PostgreSQL, SQLalchem, Docker and Spark.</li>
             <li>Replicate the various credit risk model.</li>
-            <li>Propose novel data augmentation approach to address the population.</li>
-            <li>Evaluate the credit risk models.</li>
+            <li>Will propose, implement, and test novel data augmentation approach to address the population.</li>
+            <li>Will evaluate the credit risk models with Area Under Receiver Operating Characteristic (AUC), K-S, and GINI statistics.</li>
         </ul>
     </div>
     </p>
@@ -79,10 +79,10 @@
             Vladimir Brusic</a> Li Dak Sum Chair Professor at the University of Nottingham Ningbo China, School of
             Computer Science.
         </li>
-        <li>Clean, standardize, control quality of the single cell transplantation data.</li>
-        <li>Automatize the three cell type classification and visualization methods, distance profile, RNA profile, Protein Marker Profile.</li>
-        <li>Investigate the rationales of the degradation of the ANN model in the single cell transplantation data with higher gene expression.</li>
-        <li>Investigate and propose a novel normalization approach for the promising and robust distance profile analysis.</li>
+        <li>Clean, standardize, control quality of the single cell transplantation data with various convention.</li>
+        <li>Automatize the four cell type classification and visualization methods, distance profile, RNA profile, Protein Marker Profile, Artificial Neural Network.</li>
+        <li>Investigate the rationales of the performance degradation of the ANN model on the single cell transplantation data with higher gene expression.</li>
+        <li>Investigate, propose, implement, and test a novel normalization approach for the promising and robust distance profile analysis.</li>
     </ul>
     </div>
     </p>
@@ -168,11 +168,11 @@
             <li>Implement the movement, ball playing and strike, menu, multi-players synchronization features of the
                 software with Photon Network.
             </li>
+            <li>Implement online sync feature for the players' environment with Photon Network RPC.</li>
             <li>Adapt the desktop version of the software to mobile devices and HTC Vive Pro with Google VR and STEAM
                 VR.
             </li>
             <li>Design, implement, and test the human and computer interaction features for HTC Vive Pro .</li>
-            <li>Implement online sync feature for the players' environment with Photon Network RPC.</li>
         </ul>
     </div>
     </p>
