feat: final year modules list

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         time as the data drifts. This is the fact significantly observed over the 2009 financial crisis and the 2020
         COVID-2019 period.
     </p>
+    <p>I had enrolled a range of modules for my Undergraduate final year. My module lists are conformed as <a href="docs/Module.list.Yizirui.FANG.pdf">this link</a></p>
     <p>
         This is my index page. You could find the follow information about me.
     </p>
