feat: add FYP supervisor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         student intern in Virtual Classroom Team.
     </p>
     <p>
-        My current final year project (2021 - 2022) focus on the augmentation techniques for population drift (also
+        My current final year project (2021 - 2022) supervised by <a
+            href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
+        Anthony Graham Bellotti</a> focus on the augmentation techniques for population drift (also
         concept drift)
         particularly its application in the credit risk modelling domain:<br>
         The issues this project would like to solve are that the distribution and behaviour of observations changes over
@@ -51,7 +53,7 @@
                class="btn btn-default btn-lg justified" role="button">My Transcript</a>
         </div>
 
-        For mark convention, please refer to the <a href="docs/GPA_Letter.Uni.of.Nottingham.pdf">ＧＰＡ Letter</a> issued by the University of Nottingham Ningbo China.
+        For mark convention, please refer to the <a href="docs/GPA_Letter.Uni.of.Nottingham.pdf">GPA Letter</a> issued by the University of Nottingham Ningbo China.
     </div>
     <div>
         <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
